@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Sat Jul 27 22:13:52 CEST 2013
-buildNumber0=2262
+#Sun Jul 28 12:32:28 CEST 2013
+buildNumber0=2302
