@@ -14,3 +14,4 @@ Added API support for performance profiling
 Added "callbacks" category to performance profiling
 Added Configuration.copy() and Property.copy()
 Added genetic algorithm for creating configurations automatically
+Added ConfigWriter
